got rid of vertx-testsuite